--- a/WebApplication4/WebApplication4/Views/Empleado/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Empleado/Index.cshtml
@@ -84,9 +84,9 @@
                                     <td>@row.telefono</td>
                                     <td>@row.usuario</td>
                                     <td>@row.estado</td>
-                                    <td>@Html.ActionLink("Delete", "Delete", new { id = row.usuario })</td>
-                                    @*<td>@Html.ActionLink("Edit", "Edit", new { id = row.usuario })</td>*@
-                                    <td><a href="@Url.Action("Edit", "Empleado", new { id = row.usuario })" class="btn btn-primary">Modificar <span class="glyphicon glyphicon-pencil"></span></a></td>
+                                    <td>@Html.ActionLink("Delete", "Delete", new { usuario = row.codDoc })</td>
+                                    <td>@Html.ActionLink("Edit", "Edit", new { usuario = row.codDoc })</td>
+                                    @*<td><a href="@Url.Action("Edit", "Empleado", new { id = row.codDoc })" class="btn btn-primary">Modificar <span class="glyphicon glyphicon-pencil"></span></a></td>*@
                                     @*<td>@Html.ActionLink("Delete", "Delete", new { id = row.idRegalo })</td>
                                     <td>@Html.ActionLink("Edit", "Edit", new { id = row.idRegalo })</td>*@
                                 </tr>
@@ -149,8 +149,8 @@
                                     <td>@row.telefono</td>
                                     <td>@row.usuario</td>
                                     <td>@row.estado</td>
-                                    <td>@Html.ActionLink("Delete", "Delete", new { id = row.usuario })</td>
-                                    <td>@Html.ActionLink("Edit", "Edit", new { id = row.usuario })</td>
+                                    <td>@Html.ActionLink("Delete", "Delete", new { usuario = row.codDoc})</td>
+                                    <td>@Html.ActionLink("Edit", "Edit", new { usuario = row.codDoc})</td>
                                     @*<td>@Html.ActionLink("Delete", "Delete", new { id = row.idRegalo })</td>
                             <td>@Html.ActionLink("Edit", "Edit", new { id = row.idRegalo })</td>*@
                                 </tr>
