--- a/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
+++ b/WebApplication4/WebApplication4/Views/Promocion/_RegisterPartial.cshtml
@@ -8,45 +8,49 @@
     {
         @Html.AntiForgeryToken()
 
+       
+
         <div class="form-horizontal">
             @Html.ValidationSummary(true)
             <br>
             <div class="row form-group">
-                @Html.LabelFor(model => model.fechaIni, new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @Html.EditorFor(model => model.fechaIni)
-                    @Html.ValidationMessageFor(model => model.fechaIni)
-                </div>
+                @Html.LabelFor(model => model.fechaIni, new { @class = "col-md-3" })
+               
+                @Html.EditorFor(model => model.fechaIni, new { @class = "col-md-8" })
+                @Html.ValidationMessageFor(model => model.fechaIni)
+                
             </div>
 
             <div class="row form-group">
-                @Html.LabelFor(model => model.fechaFin, new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @Html.EditorFor(model => model.fechaFin)
-                    @Html.ValidationMessageFor(model => model.fechaFin)
-                </div>
+                @Html.LabelFor(model => model.fechaFin, new { @class = "col-md-3" })
+                
+                @Html.EditorFor(model => model.fechaFin, new { @class = "col-md-8" })
+                @Html.ValidationMessageFor(model => model.fechaFin)
+                
             </div>
-            <br>
 
-            <label>Promocion:</label>
             <br>
-            <br>
-            <div class="row form-group">
-                <div class="form-inline">
-                    <label>Personalizado</label>
-                    @Html.EditorFor(model => model.cantAdq)
-                    @Html.ValidationMessageFor(model => model.cantAdq)
-                    X
-                    @Html.EditorFor(model => model.cantComp)
-                    @Html.ValidationMessageFor(model => model.cantComp)
-                </div>
-            </div><br>
+            <div class="row form-inline">
+                <div class="col-md-3">
+                    <label>Personalizado: </label>
+                </div>                
+                @Html.EditorFor(model => model.cantAdq, new { @class = "col-md-3" })
+                @Html.ValidationMessageFor(model => model.cantAdq)
+                
+                
+                <label>X</label>
+                
+                @Html.EditorFor(model => model.cantComp, new { @class = "col-md-3" })
+                @Html.ValidationMessageFor(model => model.cantComp)
 
+            </div><br> 
 
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Aceptar" class="btn btn-default" />
+                <div class="col-md-12">
+                    <input type="submit" value="Aceptar" class="btn btn-default btn-primary"/>
+                    <button tyle="button" class="btn btn-danger" data-dismiss="modal" aria-hidden="true">Salir <span class="glyphicon glyphicon-log-out"></span> </button> 
                 </div>
+                               
             </div>
         </div>
     }
