--- a/WebApplication4/WebApplication4/Views/Regalo/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/Index.cshtml
@@ -25,7 +25,7 @@
                 <button id=botonOculto style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2()">Guardar cambios <span class="glyphicon glyphicon-save"></span></button>
             </div>
         </div>
-        @*<div class="col-md-3">
+        <div class="col-md-3">
             <form action="" class="" role="search">
                 <div class="form-group">
                     <div class="input-group">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </form>
-        </div>*@
+        </div>
         <div class="col-md-3">
             <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
         </div>
