--- a/WebApplication4/WebApplication4/Views/Local/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Index.cshtml
@@ -25,7 +25,8 @@
                 <button id=botonOculto style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2()">Guardar cambios <span class="glyphicon glyphicon-save"></span></button>*@
             </div>
         </div>
-        <div class="col-md-3">
+
+        @*<div class="col-md-3">
             <form action="" class="" role="search">
                 <div class="form-group">
                     <div class="input-group">
@@ -42,7 +43,8 @@
                 <option value="">Ica</option>
             </select>
 
-        </div>
+        </div>*@
+
         <div class="col-md-1">
             <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
         </div>
@@ -50,8 +52,19 @@
     </div>
 
     @{
+        Html.RenderPartial("_Search");
+    }
+    @{
         var db = new WebApplication4.Models.inf245netsoft();
-        List<WebApplication4.Models.Local> listaLocal = db.Local.ToList();
+        List<WebApplication4.Models.Local> listaLocal ;
+        if (TempData["ListaL"] == null)
+        {
+            listaLocal = db.Local.ToList();
+        }
+        else
+        {
+            listaLocal = (List<WebApplication4.Models.Local>)TempData["ListaL"];
+        }
     }
 
     <div class="row">
