--- a/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
@@ -55,7 +55,7 @@
                                 <li><a href="pagar_reserva(vendedor).html">Buscar reserva</a></li>
                                 <li><a href="devolucion_entradas.html">Devolución</a></li>
                                 <li class="divider"></li>
-                                <li><a href="ver_cliente.html">Buscar cliente</a></li>
+                                <li><a href="@Url.Action("BuscaCliente", "CuentaUsuario")">Buscar cliente</a></li>
                                 <li class="divider"></li>
                                 <li><a href="repVentasDia.html">Reporte de ventas</a></li>
                                 <li><a href="abrir_caja.html">Apertura de caja</a></li>
