--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaCliente.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaCliente.cshtml
@@ -1,4 +1,9 @@
-﻿
+﻿@using Microsoft.AspNet.Identity
+@using WebApplication4.Models
+
+
+@model ClienteSearchModel
+
 @{
     ViewBag.Title = "BuscaCliente";
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
@@ -14,7 +19,7 @@
 
 <div class="container">
     <div class="row ">
-        <div class="col-md-1">
+        @*<div class="col-md-1">
             <label for="dni" class="control-label">Tipo Doc:</label>
         </div>
         <div class="col-md-2">
@@ -37,29 +42,94 @@
             <div class="input-group">
                 <a class="btn btn-primary" href="#regalo" data-toggle="modal"><span class="glyphicon glyphicon-gift"></span> Entregar Regalo</a>
             </div>
-        </div>
+        </div>*@
+
         <div class="col-md-3">
-            <a href="index2.html" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>
+            <a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right">Salir <span class="glyphicon glyphicon-log-out"></span></a>
         </div>
+        
     </div>
+    <br>
+    @using (Html.BeginForm("Search", "CuentaUsuario", FormMethod.Post, new { }))
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true)
+            
+            <div class="form-group">
+                @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @{
+        List<SelectListItem> listItems = new List<SelectListItem>();
+        listItems.Add(new SelectListItem
+        {
+            Text = "DNI",
+            Value = "1",
+        });
+        listItems.Add(new SelectListItem
+        {
+            Text = "Pasaporte",
+            Value = "2"
+        });
+                    }
+                    @Html.DropDownListFor(model => model.tipoDoc, listItems, "Seleccione tipo de documento")
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.codDoc)
+                    @Html.ValidationMessageFor(model => model.codDoc)
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Buscar" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+    }
+
+    @{
+        var db = new WebApplication4.Models.inf245netsoft();
+        List<WebApplication4.Models.CuentaUsuario> listaCliente=null;
+        if (TempData["ListaCL"] != null)
+        {
+            listaCliente = (List<WebApplication4.Models.CuentaUsuario>)TempData["ListaCL"];
+        }
+        else
+        {
+            listaCliente = db.CuentaUsuario.AsNoTracking().Where(c => c.estado == true && c.codPerfil == 1).ToList();
+        }
+    }
 
     <div class="row">
-        <h4>Resultados:</h4><br>
-        <table class="table table-bordered table-hover">
-            <tr class="active">
-                <th>Nombres</th>
-                <th>Apellidos</th>
-                <th>N° Doc</th>
-                <th>Puntos</th>
-
-            </tr>
-            <tr>
-                <td>Henry Antonio</td>
-                <td>Espinoza Torres</td>
-                <td>46618582</td>
-                <td>230</td>
-
-            </tr>
+        <table id="mytable" class="table table-bordered table-hover">
+            <thead>
+                <tr class="thead">
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>No Documento</th>
+                    <th>Puntos</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="tbody">
+                @foreach (var row in listaCliente)
+                {
+                    <tr id=@row.codDoc onclick="myFunction(this)">
+                        <td>@row.nombre</td>
+                        <td>@row.apellido</td>
+                        <td>@row.codDoc</td>
+                        <td>@row.puntos</td>
+                        <td>@Html.ActionLink("Selecciona", "Entrega", new { usuario = row.codDoc })</td>
+                    </tr>
+                }
+            </tbody>
         </table>
     </div>
 </div><!--Fin del container-->
@@ -76,6 +146,7 @@
             </div>
             <!--contenido de la ventana-->
             <div class="modal-body">
+
                 <form action="" class="form-horizontal">
                     <div class="form-group">
                         <label for="reg" class="control-label col-md-2">Regalo:</label>
@@ -95,6 +166,7 @@
 
                     </div>
                 </form>
+
             </div>
             <!--footer de la ventana-->
             <div class="modal-footer">
